src/tests/data/TypeErrors/WrongTypeOfParams2.c

#include <stdio.h>

int f(int a, char c, unsigned u) {}

int main()
{
    f(1, 1, 1); // ERROR

	return 0;
}